--- a/roles/base/vars/Debian.yml
+++ b/roles/base/vars/Debian.yml
@@ -20,3 +20,6 @@ pkgmgr_remove_short: ar
 airline_theme: solarized
 vim_theme: solarized8_high
 omp_theme: peru
+alias_template_file: alias.j2
+zshrc_template_file: zshrc.j2
+vimrc_template_file: vimrc.j2
