--- a/roles/base/vars/Archlinux.yml
+++ b/roles/base/vars/Archlinux.yml
@@ -22,3 +22,6 @@ pkgmgr_remove_short: pr
 airline_theme: 
 vim_theme: two-firewatch
 omp_theme: wopian
+alias_template_file: alias.j2
+zshrc_template_file: zshrc.j2
+vimrc_template_file: vimrc.j2
