--- a/roles/base/vars/Void.yml
+++ b/roles/base/vars/Void.yml
@@ -20,3 +20,6 @@ pkgmgr_remove_short: xr
 airline_theme: wombat
 vim_theme: gotham
 omp_theme: slimfat
+alias_template_file: alias.j2
+zshrc_template_file: zshrc.j2
+vimrc_template_file: vimrc.j2
