--- a/roles/antix/tasks/main.yml
+++ b/roles/antix/tasks/main.yml
@@ -4,7 +4,7 @@
   # - include_tasks: eza.yml
   # - include_tasks: packages.yml
   # - include_tasks: firefox.yml
-  - include_tasks: ../debian/tasks/oh-my-posh.yml
+  # - include_tasks: ../debian/tasks/oh-my-posh.yml
   - include_tasks: zsh-alias.yml
   - include_tasks: ../debian/tasks/tilix_config.yml
   - include_tasks: virtualbox.yml
