--- a/roles/antix/tasks/zsh-alias.yml
+++ b/roles/antix/tasks/zsh-alias.yml
@@ -7,7 +7,7 @@
     group: "{{ user }}"
 
 - name: Install oh-my-zsh
-  become_user: "{{ user }}"
+  # become_user: "{{ user }}"
   shell:
     cmd: ./install.sh
     chdir: /home/{{ user }}
