fix antix oh-my-zsh

--- a/roles/antix/tasks/zsh-alias.yml
+++ b/roles/antix/tasks/zsh-alias.yml
@@ -6,8 +6,14 @@
     owner: "{{ user }}"
     group: "{{ user }}"
 
+- name: set oh-my-zsh script to executable
+  tags: oh-my-zsh
+  file:
+    path: /home/{{ user }}/install.sh
+    mode: +x
+
 - name: Install oh-my-zsh
-  # become_user: "{{ user }}"
+  become_user: "{{ user }}"
   shell:
     cmd: ./install.sh
     chdir: /home/{{ user }}
