fix antix tilix

--- a/roles/antix/tasks/files.yml
+++ b/roles/antix/tasks/files.yml
@@ -58,3 +58,12 @@
     dest: /home/{{ user }}/.vim/colors/onedark.vim
     owner: "{{ user }}"
     group: "{{ user }}"
+
+- name: download tilix settings script
+  tags: tilix,settings
+  copy:
+    src: files/tilix.sh
+    dest: /home/{{ user }}
+    mode: +x
+    owner: "{{ user }}"
+    group: "{{ user }}"
