--- a/roles/antix/tasks/main.yml
+++ b/roles/antix/tasks/main.yml
@@ -1,6 +1,6 @@
 - block:
   # - include_tasks: ../debian/tasks/directories.yml
-  # - include_tasks: files.yml
+  - include_tasks: files.yml
   # - include_tasks: eza.yml
   # - include_tasks: packages.yml
   # - include_tasks: firefox.yml
