fix antix virtualbox

--- a/roles/antix/tasks/virtualbox.yml
+++ b/roles/antix/tasks/virtualbox.yml
@@ -3,28 +3,28 @@
   shell: uname -r
   register: uname_result
 
-- name: install packages for VirtualBox
-  tags: virtualbox
-  apt:
-    name:
-      - build-essential
-      - dkms
-      - gcc
-      - make
-      - linux-headers-{{ uname_result.stdout }}
+# - name: install packages for VirtualBox
+#   tags: virtualbox
+#   apt:
+#     name:
+#       - build-essential
+#       - dkms
+#       - gcc
+#       - make
+#       - linux-headers-{{ uname_result.stdout }}
 
-- name: Download VirtualBox Guest Additions install file
-  tags: virtualbox
-  get_url:
-    url: http://download.virtualbox.org/virtualbox/{{ vbox_version }}/VBoxGuestAdditions_{{ vbox_version }}.iso
-    dest: /tmp
-    owner: root
-    group: root
+# - name: Download VirtualBox Guest Additions install file
+#   tags: virtualbox
+#   get_url:
+#     url: http://download.virtualbox.org/virtualbox/{{ vbox_version }}/VBoxGuestAdditions_{{ vbox_version }}.iso
+#     dest: /tmp
+#     owner: root
+#     group: root
 
 - name: mount VirtualBox iso
   become: true
   shell:
-    cmd: mount -o loop,ro VBoxGuestAdditions_{{ vbox_version }}.iso /mnt
+    cmd: mount -o loop VBoxGuestAdditions_{{ vbox_version }}.iso /mnt
   args:
     executable: /bin/bash
 
