--- a/roles/antix/tasks/virtualbox.yml
+++ b/roles/antix/tasks/virtualbox.yml
@@ -43,7 +43,7 @@
   become: true
   shell:
     cmd: sh ./VBoxLinuxAdditions.run --nox11 > /dev/null
-    chdir: /mnt/
+    chdir: /mnt/iso
   args:
     executable: /bin/bash
   ignore_errors: true
