--- a/roles/antix/tasks/virtualbox.yml
+++ b/roles/antix/tasks/virtualbox.yml
@@ -38,12 +38,20 @@
   args:
     executable: /bin/bash
 
+- name: copy guest additions file
+  copy:
+    src: /mnt/iso/VBoxLinuxAdditions.run
+    dest: /tmp/
+    owner: root
+    group: root
+    mode: 0644
+
 - name: install VirtualBox Guest Additions
   tags: virtualbox
   become: true
   shell:
     cmd: sudo sh ./VBoxLinuxAdditions.run --nox11 > /dev/null
-    chdir: /mnt/iso
+    chdir: /tmp
   args:
     executable: /bin/bash
   ignore_errors: true
