--- a/roles/antix/tasks/files.yml
+++ b/roles/antix/tasks/files.yml
@@ -67,3 +67,15 @@
     mode: +x
     owner: "{{ user }}"
     group: "{{ user }}"
+
+- name: edit fehbg
+  lineinfile:
+    path: /home/{{ user }}/.fehbg
+    regexp: '^feh'
+    line: "feh --no-fehbg --bg-scale '/usr/share/wallpaper/pylons.jpg"
+
+- name: edit desktop-session
+  lineinfile:
+    path: /home/{{ user }}/.desktop-session/default-desktop
+    line: "zzz-jwm"
+
