--- a/roles/antix/tasks/virtualbox.yml
+++ b/roles/antix/tasks/virtualbox.yml
@@ -3,23 +3,23 @@
   shell: uname -r
   register: uname_result
 
-- name: install packages for VirtualBox
-  tags: virtualbox
-  apt:
-    name:
-      - build-essential
-      - dkms
-      - gcc
-      - make
-      - linux-headers-{{ uname_result.stdout }}
+# - name: install packages for VirtualBox
+#   tags: virtualbox
+#   apt:
+#     name:
+#       - build-essential
+#       - dkms
+#       - gcc
+#       - make
+#       - linux-headers-{{ uname_result.stdout }}
 
-- name: Download VirtualBox Guest Additions install file
-  tags: virtualbox
-  get_url:
-    url: http://download.virtualbox.org/virtualbox/{{ vbox_version }}/VBoxGuestAdditions_{{ vbox_version }}.iso
-    dest: /tmp
-    owner: root
-    group: root
+# - name: Download VirtualBox Guest Additions install file
+#   tags: virtualbox
+#   get_url:
+#     url: http://download.virtualbox.org/virtualbox/{{ vbox_version }}/VBoxGuestAdditions_{{ vbox_version }}.iso
+#     dest: /tmp
+#     owner: root
+#     group: root
 
 - name: create directory
   tags: directory
@@ -28,7 +28,7 @@
     state: directory
     owner: root
     group: root
-    mode: 0755
+    mode: 0775
 
 - name: mount VirtualBox iso
   become: true
