--- a/roles/antix/tasks/virtualbox.yml
+++ b/roles/antix/tasks/virtualbox.yml
@@ -67,8 +67,7 @@
   become: true
   expect:
     command: sudo sh /tmp/VBoxLinuxAdditions.run --nox11 > /dev/null
-    responses: 
-      'Do you wish to continue? [yes/no]': 'yes'
+    responses: 'Do you wish to continue? [yes/no]': 'yes'
     echo: yes
   ignore_errors: true
 
