--- a/roles/antix/tasks/main.yml
+++ b/roles/antix/tasks/main.yml
@@ -6,7 +6,7 @@
   - include_tasks: firefox.yml
   - include_tasks: zsh-alias.yml
   - include_tasks: tilix_config.yml
-  - include_tasks: ../debian/tasks/cleanup.yml
+  - include_tasks: cleanup.yml
 
   # - include_tasks: ../debian/tasks/oh-my-posh.yml
   # - include_tasks: virtualbox.yml
