--- a/roles/debian/tasks/main.yml
+++ b/roles/debian/tasks/main.yml
@@ -3,8 +3,8 @@
   - include_tasks: directories.yml
   - include_tasks: duf.yml
   - include_tasks: nala.yml
-  - include_tasks: oh-my-posh.yml
-  - include_tasks: zsh-alias.yml
+  # - include_tasks: oh-my-posh.yml
+  - include_tasks: ../antix/tasks/zsh-alias.yml
   - include_tasks: files.yml
   - include_tasks: xfconf.yml
   - include_tasks: tilix_config.yml
