--- a/roles/cbpp/tasks/files.yml
+++ b/roles/cbpp/tasks/files.yml
@@ -99,3 +99,11 @@
     group: "{{ user }}"
     backup: yes
 
+- name: install amro theme
+  copy:
+    src: files/amro.omp.json
+    dest: /home/{{ user }}/.poshthemes/
+    owner: "{{ user }}"
+    group: "{{ user }}"
+    backup: yes
+
