--- a/roles/antix/tasks/main.yml
+++ b/roles/antix/tasks/main.yml
@@ -3,6 +3,7 @@
   - include_tasks: files.yml
   - include_tasks: ../debian/tasks/eza.yml
   - include_tasks: packages.yml
+  - include_tasks: ../debian/tasks/fastfetch.yml
   - include_tasks: firefox.yml
   - include_tasks: zsh-alias.yml
   - include_tasks: tilix_config.yml
