--- a/roles/base/vars/Archlinux.yml
+++ b/roles/base/vars/Archlinux.yml
@@ -25,3 +25,4 @@ omp_theme: wopian
 alias_template_file: alias.j2
 zshrc_template_file: zshrc.j2
 vimrc_template_file: vimrc.j2
+fetch: fastfetch --load-config examples/10.jsonc
