--- a/roles/base/vars/Debian.yml
+++ b/roles/base/vars/Debian.yml
@@ -23,3 +23,4 @@ omp_theme: amro
 alias_template_file: alias.j2
 zshrc_template_file: zshrc.j2
 vimrc_template_file: vimrc.j2
+fetch: fastfetch --load-config examples/10.jsonc
