--- a/roles/cbpp/tasks/main.yml
+++ b/roles/cbpp/tasks/main.yml
@@ -5,6 +5,7 @@
   - include_tasks: ../debian/tasks/zsh-alias.yml
   - include_tasks: firefox.yml
   - include_tasks: files.yml
+  - include_tasks: ../debian/tasks/fastfetch.yml
   - include_tasks: ../debian/tasks/tilix_config.yml
   - include_tasks: ../debian/tasks/eza.yml
   - include_tasks: ../debian/tasks/virtualbox.yml
