--- a/roles/base/vars/Archlinux.yml
+++ b/roles/base/vars/Archlinux.yml
@@ -5,7 +5,7 @@ firefox_package: firefox
 chromium_package: chromium
 userpass: msh
 user: matt
-fd: fd
+fd_package: fd
 init_status: systemctl status
 init_start: systemctl start
 init_restart: systemctl restart
