--- a/roles/base/vars/Fedora.yml
+++ b/roles/base/vars/Fedora.yml
@@ -3,7 +3,7 @@ firefox_package: firefox
 chromium_package: chromium
 ssh_package: openssh
 user: matt
-fd: fd
+fd_package: fd
 init_status: systemctl status
 init_start: systemctl start
 init_restart: systemctl restart
