--- a/roles/fedora/tasks/packages.yml
+++ b/roles/fedora/tasks/packages.yml
@@ -2,14 +2,14 @@
 
 - name: Install RPM Fusion Free
   dnf:
-    name: "https://download1.rpmfusion.org/free/fedora/rpmfusion-free-release-{{ fedora_version.stdout }}.noarch.rpm"
+    name: "https://download1.rpmfusion.org/free/fedora/rpmfusion-free-release-{{ ansible_distribution_version }}.noarch.rpm"
     state: present
     disable_gpg_check: yes
   when: ansible_distribution == "Fedora"
 
 - name: Install RPM Fusion NonFree
   dnf:
-    name: "https://download1.rpmfusion.org/nonfree/fedora/rpmfusion-nonfree-release-{{ fedora_version.stdout }}.noarch.rpm"
+    name: "https://download1.rpmfusion.org/nonfree/fedora/rpmfusion-nonfree-release-{{ ansible_distribution_version }}.noarch.rpm"
     state: present
     disable_gpg_check: yes
   when: ansible_distribution == "Fedora"
