fixing antix oh my zsh

--- a/roles/antix/tasks/zsh-alias.yml
+++ b/roles/antix/tasks/zsh-alias.yml
@@ -1,3 +1,18 @@
+---
+
+- name: check if oh-my-zsh directory exists
+  tags: oh-my-zsh
+  stat:
+    path: /home/{{ user }}/.oh-my-zsh
+  register: omz
+
+- name: back up i3 config file
+  tags: i3
+  copy:
+    src: /home/{{ user }}/.config/i3/config
+    dest: /home/{{ user }}/.config/i3/config.bak
+  when: i3config.stat.exists
+
 - name: Download oh-my-zsh
   tags: zsh
   get_url:
@@ -14,6 +29,7 @@
     chdir: /home/{{ user }}
   args:
     executable: /bin/bash
+  when: omz.stat.exists
 
 - name: create safe git directory
   tags: git
