--- a/roles/antix/files/compton.conf
+++ b/roles/antix/files/compton.conf
@@ -15,6 +15,7 @@ shadow-exclude = [
 	"class_g = 'Conky'",
 	"class_g ?= 'Notify-osd'",
 	"class_g = 'Cairo-clock'",
+    "class_g = 'firefox'"
 	"_GTK_FRAME_EXTENTS@:c"
 ];
 # shadow-exclude = "n:e:Notification";
@@ -22,8 +23,10 @@ shadow-exclude = [
 # xinerama-shadow-crop = true;
 
 # Opacity
-menu-opacity = 0.8;
-inactive-opacity = 0.8;
+#menu-opacity = 0.8;
+menu-opacity = 1.0;
+#inactive-opacity = 0.8;
+inactive-opacity = 1.0;
 # active-opacity = 0.8;
 frame-opacity = 0.7;
 inactive-opacity-override = false;
