antix fixes, remove onedrivegui from base

--- a/roles/antix/files/conky.conf
+++ b/roles/antix/files/conky.conf
@@ -141,9 +141,9 @@ ${font}${color1}NETWORK ${hr 2}
 ${voffset 5}${font}${color3}${addr enp0s31f6}${alignr}${font}${color}${if_existing /sys/class/net/enp0s31f6/operstate up}ONLINE${else}OFFLINE${endif}
 ${font}${color}
 ${color3}Down: ${color}${downspeed enp0s31f6}/s  ${color3}${alignr} Total: ${color}${totaldown enp0s31f6}
-${color4}${downspeedgraph enp0s31f6}${color}
+${color4}${downspeedgraph "enp0s31f6"}${color}
 ${color3}Up: ${color}${upspeed enp0s31f6}/s      ${color3}${alignr} Total: ${color}${totalup enp0s31f6}
-${color4}${upspeedgraph enp0s31f6}${color}
+${color4}${upspeedgraph "enp0s31f6"}${color}
 
 ${font}${color1}HARD DRIVE ${hr 2}
 ${color}Disk: ${fs_used /} of ${fs_size /} used
