--- a/roles/arch/tasks/main.yml
+++ b/roles/arch/tasks/main.yml
@@ -7,7 +7,7 @@
   - include_tasks: directories.yml
   - include_tasks: i3config.yml
   - include_tasks: ../debian/tasks/oh-my-posh.yml
-  - include_tasks: ../debian/tasks/zsh-alias.yml
+  - include_tasks: zsh.yml
   - include_tasks: samba.yml
   - include_tasks: ../base/tasks/nano.yml
   - include_tasks: ../base/tasks/fonts.yml
