--- a/roles/base/tasks/main.yml
+++ b/roles/base/tasks/main.yml
@@ -1,6 +1,8 @@
 - include_vars: "{{ ansible_distribution }}.yml"
 
 - block:
+  - include_tasks: ../arch/tasks/users.yml
+    when: ansible_distribution == "archlinux"
   - include_tasks: directories.yml
   - include_tasks: tasks/packages.yml
   - include_tasks: configs.yml
