--- a/roles/base/tasks/main.yml
+++ b/roles/base/tasks/main.yml
@@ -2,7 +2,7 @@
 
 - block:
   - include_tasks: ../arch/tasks/users.yml
-    when: ansible_distribution == "archlinux"
+    when: ansible_distribution == "Archlinux"
   - include_tasks: directories.yml
   - include_tasks: tasks/packages.yml
   - include_tasks: configs.yml
